--- a/newrpg.cabal
+++ b/newrpg.cabal
@@ -19,6 +19,10 @@ executable newrpg
   main-is:             Main.hs
   -- other-modules:       
   -- other-extensions:    
-  build-depends:       base >=4.6 && <4.7
+  build-depends:       base >=4.6 && <4.7, 
+                       random-extras, 
+                       random-source, 
+                       random-fu
   -- hs-source-dirs:      
   default-language:    Haskell2010
+  ghc-options:         -fno-warn-missing-signatures
